from __future__ import annotations

import sqlite3
from typing import TYPE_CHECKING

if TYPE_CHECKING:
    from .service import ModelIndex


def init_db(index: "ModelIndex") -> None:
    with index._conn:
        index._conn.executescript(
            """
            PRAGMA journal_mode = MEMORY;
            PRAGMA synchronous = OFF;
            PRAGMA temp_store = MEMORY;
            PRAGMA foreign_keys = OFF;

            CREATE TABLE IF NOT EXISTS entities (
                artifact_id TEXT PRIMARY KEY,
                artifact_type TEXT NOT NULL,
                name TEXT NOT NULL,
                version TEXT NOT NULL,
                status TEXT NOT NULL,
                domain TEXT NOT NULL,
                subdomain TEXT NOT NULL,
                path TEXT NOT NULL,
                scope TEXT NOT NULL,
                keywords_json TEXT NOT NULL,
                extra_json TEXT NOT NULL,
                content_text TEXT NOT NULL,
                display_blocks_json TEXT NOT NULL,
                display_label TEXT NOT NULL,
                display_alias TEXT NOT NULL
            );

            CREATE TABLE IF NOT EXISTS connections (
                artifact_id TEXT PRIMARY KEY,
                source TEXT NOT NULL,
                target TEXT NOT NULL,
                conn_type TEXT NOT NULL,
                version TEXT NOT NULL,
                status TEXT NOT NULL,
                path TEXT NOT NULL,
                scope TEXT NOT NULL,
                extra_json TEXT NOT NULL,
                content_text TEXT NOT NULL,
                associated_entities_json TEXT NOT NULL,
                src_cardinality TEXT NOT NULL,
                tgt_cardinality TEXT NOT NULL
            );

            CREATE TABLE IF NOT EXISTS diagrams (
                artifact_id TEXT PRIMARY KEY,
                artifact_type TEXT NOT NULL,
                name TEXT NOT NULL,
                diagram_type TEXT NOT NULL,
                version TEXT NOT NULL,
                status TEXT NOT NULL,
                path TEXT NOT NULL,
                scope TEXT NOT NULL,
                extra_json TEXT NOT NULL
            );

            CREATE TABLE IF NOT EXISTS entity_context_edges (
                entity_id TEXT NOT NULL,
                connection_id TEXT NOT NULL,
                direction_bucket TEXT NOT NULL,
                other_entity_id TEXT NOT NULL,
                conn_type TEXT NOT NULL,
                connection_status TEXT NOT NULL,
                source_id TEXT NOT NULL,
                target_id TEXT NOT NULL,
                source_name TEXT NOT NULL,
                target_name TEXT NOT NULL,
                source_artifact_type TEXT NOT NULL,
                target_artifact_type TEXT NOT NULL,
                source_domain TEXT NOT NULL,
                target_domain TEXT NOT NULL,
                source_scope TEXT NOT NULL,
                target_scope TEXT NOT NULL,
                path TEXT NOT NULL,
                content_text TEXT NOT NULL,
                associated_entities_json TEXT NOT NULL,
                src_cardinality TEXT NOT NULL,
                tgt_cardinality TEXT NOT NULL,
                PRIMARY KEY (entity_id, connection_id, direction_bucket)
            );

            CREATE TABLE IF NOT EXISTS entity_context_stats (
                entity_id TEXT PRIMARY KEY,
                conn_in INTEGER NOT NULL DEFAULT 0,
                conn_out INTEGER NOT NULL DEFAULT 0,
                conn_sym INTEGER NOT NULL DEFAULT 0
            );

            CREATE INDEX IF NOT EXISTS idx_entities_type ON entities(artifact_type);
            CREATE INDEX IF NOT EXISTS idx_entities_domain ON entities(domain);
            CREATE INDEX IF NOT EXISTS idx_entities_status ON entities(status);
            CREATE INDEX IF NOT EXISTS idx_connections_source ON connections(source);
            CREATE INDEX IF NOT EXISTS idx_connections_target ON connections(target);
            CREATE INDEX IF NOT EXISTS idx_connections_type ON connections(conn_type);
            CREATE INDEX IF NOT EXISTS idx_connections_status ON connections(status);
            CREATE INDEX IF NOT EXISTS idx_diagrams_type ON diagrams(diagram_type);
            CREATE INDEX IF NOT EXISTS idx_diagrams_status ON diagrams(status);
            CREATE INDEX IF NOT EXISTS idx_entity_context_edges_entity ON entity_context_edges(entity_id, direction_bucket, connection_id);
            CREATE INDEX IF NOT EXISTS idx_entity_context_edges_other ON entity_context_edges(other_entity_id);
            """
        )
    try:
        with index._conn:
            index._conn.executescript(
                """
                CREATE VIRTUAL TABLE IF NOT EXISTS entities_fts USING fts5(
                    artifact_id UNINDEXED,
                    name,
                    artifact_type,
                    domain,
                    subdomain,
                    keywords,
                    content_text,
                    display_label
                );
                CREATE VIRTUAL TABLE IF NOT EXISTS connections_fts USING fts5(
                    artifact_id UNINDEXED,
                    source,
                    target,
                    conn_type,
                    content_text
                );
                CREATE VIRTUAL TABLE IF NOT EXISTS diagrams_fts USING fts5(
                    artifact_id UNINDEXED,
                    name,
                    diagram_type,
                    artifact_type
                );
                """
            )
    except sqlite3.OperationalError:
        index._fts_enabled = False
